...
                        filterGenres.remove('28');
                        arrayGenres[0] = arrayGenres[0] - 1;
                      }
                      setState(() {});
                    },
                    image: 'assets/genres_icons/accion.png',
                    text: 'ACCION',
                  ),
                  const SizedBox(width: 15),
                  CardFilter(
                    onFlip: () {
                      setState(() {
                        if (arrayGenres[1] == 0) {
...
                        filterGenres.remove('12');
                        arrayGenres[2] = arrayGenres[2] - 1;
                      }
                      setState(() {});
                    },
                    image: 'assets/genres_icons/aventura.png',
                    text: 'AVENTURA',
                  ),
                  const SizedBox(width: 15),
                  CardFilter(
                    onFlip: () {
                      setState(() {
                        if (arrayGenres[3] == 0) {
...
                width: 1.0,
              ),
            ),
            fixedSize: const Size(130, 42),
          ),
          child: const Text(
            'Siguiente',
            style: TextStyle(
              fontSize: 18,
              fontWeight: FontWeight.w500,
            ),
          ),
        ),
...
    return Column(
      key: const Key('platform_selection'),
      children: [
        const Align(
          alignment: Alignment.centerLeft,
          child: Text(
            'Selecciona las plataformas que tengas',
            style: TextStyle(
              fontSize: 15,
              fontWeight: FontWeight.w500,
              color: Colors.white,
            ),
          ),
...
                          filterProviders.remove('2');
                          arrayProviders[0] = arrayProviders[0] - 1;
                        }
                      });
                    },
                    image: 'assets/platform_icons/apple-tv.png',
                    text: 'APPLE TV',
                  ),
                  const SizedBox(width: 15),
                  CardFilter(
                    onFlip: () {
                      if (arrayProviders[1] == 0) {
                        filterProviders.add('337');
...
                    width: 1.0,
                  ),
                ),
                fixedSize: const Size(130, 42),
              ),
              child: const Text(
                'Atrás',
                style: TextStyle(
                  fontSize: 18,
                  fontWeight: FontWeight.bold,
                ),
              ),
            ),
...
                          width: 90,
                          height: 90,
                        ),
                        SizedBox(height: 20),
                        Center(
                          child: Text(
                            'INDIVIDUAL',
                            style: TextStyle(
                              fontSize: 15,
                              fontWeight: FontWeight.bold,
                              color: Colors.white,
                            ),
                          ),
...
                          width: 90,
                          height: 90,
                        ),
                        SizedBox(height: 20),
                        Center(
                          child: Text(
                            'GRUPAL',
                            style: TextStyle(
                              fontSize: 15,
                              fontWeight: FontWeight.bold,
                              color: Colors.white,
                            ),
                          ),
...
                          width: 90,
                          height: 90,
                        ),
                        SizedBox(height: 20),
                        Center(
                          child: Text(
                            'UNIRSE',
                            style: TextStyle(
                              fontSize: 15,
                              fontWeight: FontWeight.bold,
                              color: Colors.white,
                            ),
                          ),
...
                          width: 90,
                          height: 90,
                        ),
                        SizedBox(height: 20),
                        Center(
                          child: Text(
                            'CREAR SALA',
                            style: TextStyle(
                              fontSize: 15,
                              fontWeight: FontWeight.bold,
                              color: Colors.white,
                            ),
                          ),
...
