...
              ],
            ),
          ),
          const SizedBox(height: 25),
          _ProfileOptionTile(
            icon: Icons.book_outlined,
            label: 'Ver diario',
            onTap: () async {
              List<MovieDiaryEntry> movieDiary = [];

              try {
                final userId = FirebaseAuth.instance.currentUser?.uid;

...
            indent: 75,
            endIndent: 75,
            color: Color.fromRGBO(190, 49, 68, 1),
          ),
          _ProfileOptionTile(
            icon: Icons.exit_to_app,
            label: 'Cerrar sesión',
            color: const Color.fromRGBO(190, 49, 68, 1),
            onTap: () async {
              await FirebaseAuth.instance.signOut();
              Navigator.of(context).pushReplacementNamed('/');
            },
          ),
...
