...
        return true;
      },
      child: Scaffold(
        appBar: AppBar(
          backgroundColor: const Color.fromRGBO(21, 4, 29, 1),
          title: const Text(
            "Añadir película al diario",
            style: TextStyle(color: Colors.white),
          ),
          iconTheme: const IconThemeData(color: Colors.white),
          leading: IconButton(
            icon: const Icon(Icons.arrow_back),
            onPressed: () {
...
                            color: Color.fromRGBO(190, 49, 68, 1),
                            width: 1.0,
                          ),
                        ),
                      ),
                      child: const Text(
                        "Añadir al diario",
                        style: TextStyle(fontSize: 18),
                      ),
                    ),
                  ),
                if (widget.isEditing)
                  Center(
...
