...
                          width: 1.0,
                        ),
                      ),
                      fixedSize: const Size(115, 42),
                    ),
                    child: const Text(
                      'Salir',
                      style: TextStyle(
                        fontSize: 14,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                  ),
...
                              width: 1.0,
                            ),
                          ),
                          fixedSize: const Size(115, 42),
                        ),
                        child: const Text(
                          'Comenzar', //Aqui se debe manadar a Swiper, pero modificado para grupal
                          style: TextStyle(
                            fontSize: 14,
                            fontWeight: FontWeight.bold,
                          ),
                        ),
                      )
...
